Made an endpoint to receive user data
